--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,20 @@
-
 {
-  "name": "FOCO André",
+  "name": "FOCO: O Mestre de Tarefas do André",
   "short_name": "FOCO",
-  "description": "Sistema de Alta Performance do André",
+  "description": "Um sistema de alta performance e produtividade.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#f8fafc",
-  "theme_color": "#4f46e5",
+  "background_color": "#050a18",
+  "theme_color": "#050a18",
+  "orientation": "portrait",
+  "categories": ["productivity", "utilities"],
   "icons": [
+    {
+      "src": "https://cdn-icons-png.flaticon.com/512/3593/3593505.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
     {
       "src": "https://cdn-icons-png.flaticon.com/512/3593/3593505.png",
       "sizes": "512x512",
