--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,18 @@
-
 {
-  "name": "FOCO André",
+  "name": "FOCO: Task Master",
   "short_name": "FOCO",
-  "description": "Sistema de Alta Performance do André",
+  "description": "Sistema de produtividade agressiva do André.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#f8fafc",
-  "theme_color": "#4f46e5",
+  "background_color": "#050a18",
+  "theme_color": "#050a18",
   "icons": [
+    {
+      "src": "https://cdn-icons-png.flaticon.com/512/3593/3593505.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
     {
       "src": "https://cdn-icons-png.flaticon.com/512/3593/3593505.png",
       "sizes": "512x512",
